trying to stop right page overflow on homepage mobile
Changed line 234:
.support-section {
  background-color: #dfeeee;
  padding: 80px 20px;
  text-align: center;
  width: 100%;
  margin: 0;
}

--- a/style.css
+++ b/style.css
@@ -235,10 +235,8 @@ text-align: center;
   background-color: #dfeeee;
   padding: 80px 20px;
   text-align: center;
-
-  width: 100vw;
-  margin-left: calc(50% - 50vw);
-  margin-right: calc(50% - 50vw);
+  width: 100%;
+  margin: 0;
 }
 .about-photo img {
     width: 300px;
